--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
       <div id="empty" class="muted" style="display:none">Aucune idée pour le moment.</div>
     </section>
   </div>
+<!-- SDK Firebase (compat, pour pouvoir faire firebase.initializeApp(...)) -->
+<script defer src="https://www.gstatic.com/firebasejs/10.14.0/firebase-app-compat.js"></script>
+<script defer src="https://www.gstatic.com/firebasejs/10.14.0/firebase-firestore-compat.js"></script>
 
 <script>
   // TODO: Firebase config (colle la tienne ici)
